Fix LDAP XPCOM SDK race condition which could cause LDAP entries to get dropped, or binds to fail entirely (bug 131447).  The old code asked ldap_result() for all new messages received, including ones for operations that it did not yet know how to handle. That code has been changed to enumerate the pending operations, and ask for results of each of the pending operations that it knows about, and no others. r=sspitzer@netscape.com, dmose@netscape.com; sr=bienvenu@netscape.com; a=asa@mozilla.org