directory/xpcom/base/src/nsLDAPMessage.h
@@ -39,6 +39,7 @@
 #include "nsILDAPMessage.h"
 #include "nsILDAPOperation.h"
 #include "nsCOMPtr.h"
+#include "nsHashtable.h"
 
 // 76e061ad-a59f-43b6-b812-ee6e8e69423f
 //
@@ -51,6 +52,9 @@ class nsLDAPMessage : public nsILDAPMessage
     friend class nsLDAPOperation;
     friend class nsLDAPConnection;
     friend class nsLDAPConnectionLoop;
+    friend PRBool PR_CALLBACK CheckLDAPOperationResult(nsHashKey *aKey, 
+                                                       void *aData,
+                                                       void* aClosure);
 
   public:       
 
